--- a/web/package.json
+++ b/web/package.json
@@ -14,14 +14,14 @@
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^17.0.1",
-    "@angular/animations": "^17.0.5",
-    "@angular/common": "^17.0.5",
-    "@angular/compiler": "^17.0.5",
-    "@angular/core": "^17.0.5",
-    "@angular/forms": "^17.0.5",
-    "@angular/platform-browser": "^17.0.5",
-    "@angular/platform-browser-dynamic": "^17.0.5",
-    "@angular/router": "^17.0.5",
+    "@angular/animations": "17.0.5",
+    "@angular/common": "17.0.5",
+    "@angular/compiler": "17.0.5",
+    "@angular/core": "17.0.5",
+    "@angular/forms": "17.0.5",
+    "@angular/platform-browser": "17.0.5",
+    "@angular/platform-browser-dynamic": "17.0.5",
+    "@angular/router": "17.0.5",
     "dotenv-webpack": "^8.1.0",
     "microns": "^1.1.4",
     "rxjs": "~7.8.0",
@@ -30,9 +30,9 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.5",
+    "@angular-devkit/build-angular": "17.0.5",
     "@angular/cli": "~17.0.5",
-    "@angular/compiler-cli": "^17.0.5",
+    "@angular/compiler-cli": "17.0.5",
     "@types/chrome": "^0.0.287",
     "ngx-build-plus": "^17.0.0",
     "typescript": "~5.2.0"
