--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "@angular-devkit/build-angular": "17.0.5",
     "@angular/cli": "~17.0.5",
     "@angular/compiler-cli": "17.0.5",
+    "@angular/language-service": "^19.2.6",
     "@types/chrome": "^0.0.287",
     "ngx-build-plus": "^17.0.0",
     "typescript": "~5.2.0"
