--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "@angular/compiler-cli": "17.0.5",
     "@angular/language-service": "^19.2.6",
     "@types/chrome": "^0.0.287",
+    "@types/firefox-webext-browser": "^143.0.0",
     "ngx-build-plus": "^17.0.0",
     "typescript": "~5.2.0"
   }
